tests/baselines/reference/parserEnum5.errors.txt
parserEnum5.ts(2,12): error TS1357: An enum member name must be followed by a ',', '=', or '}'.
parserEnum5.ts(2,14): error TS2452: An enum member cannot have a numeric name.
parserEnum5.ts(3,15): error TS1357: An enum member name must be followed by a ',', '=', or '}'.
parserEnum5.ts(3,17): error TS2452: An enum member cannot have a numeric name.
parserEnum5.ts(3,24): error TS1357: An enum member name must be followed by a ',', '=', or '}'.
parserEnum5.ts(3,26): error TS2452: An enum member cannot have a numeric name.


==== parserEnum5.ts (6 errors) ====
    enum E2 { a, }
    enum E3 { a: 1, }
               ~
!!! error TS1357: An enum member name must be followed by a ',', '=', or '}'.
                 ~
!!! error TS2452: An enum member cannot have a numeric name.
    enum E1 { a, b: 1, c, d: 2 = 3 }
                  ~
!!! error TS1357: An enum member name must be followed by a ',', '=', or '}'.
                    ~
!!! error TS2452: An enum member cannot have a numeric name.
                           ~
!!! error TS1357: An enum member name must be followed by a ',', '=', or '}'.
                             ~
!!! error TS2452: An enum member cannot have a numeric name.